--- a/index.html
+++ b/index.html
@@ -32,24 +32,21 @@
                 <div class="bar2"></div>
                 <div class="bar3"></div>
             </div>
-            <a href="index.html" class="active">Problem Statement</a>  <!-- Indicates currently active page -->
-            <div class="dropdown">
-                <button class="dropbtn">Methodology</button>
-                <!-- Methodology dropdown menu content -->
-                <div class="dropdown-content">
-                    <a href="agolmethod.html">AGOL Method</a>
-                    <a href="integratedmethod.html">Integrated Method</a>
-                </div> 
-            </div>
+            <a href="index.html" class="active">Home</a>  <!-- Indicates currently active page -->
             <div class="dropdown">
                 <button class="dropbtn">Solution</button>
-                <!-- Solutions dropdown menu content -->
+                <!-- Methodology dropdown menu content -->
                 <div class="dropdown-content">
-                    <a href="agolsolution.html">AGOL Solution</a>
-                    <a href="integratedsolution.html">Integrated Solution</a>
+                    <a href="evacmaps.html">Evacuation Maps</a>
+                    <a href="envsolution.html">Environmental Management Solution</a>
+                    <a href="sheqsystem.html">SHEQ Management System</a>
+                    <a href="opsmaps.html">Operational Maps</a>
+                    <a href="basemaps.html">Basemaps</a>
+                    <a href="backup.html">Backup Script</a>
+                    <a href="mapviewer.html">Campus Map Viewer</a>
+                    <a href="training.html">Training</a>
                 </div> 
             </div>
-            <a href="thingswetried.html">Things We Tried</a>
             <a href="team.html">Meet the Team</a>
         </div>
 
