--- a/envsolution.html
+++ b/envsolution.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Evacuation Maps</title>
+        <title>Environmental Management Solution</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon Icon is taken from https://www.flaticon.com/ -->
         <link rel="icon" href="assets/penguin.png">
@@ -37,8 +37,8 @@
                 <button class="dropbtn">Solution</button>
                 <!-- Methodology dropdown menu content -->
                 <div class="dropdown-content">
-                    <a href="evacmaps.html" class="active">Evacuation Maps</a>   <!-- Indicates currently active page -->
-                    <a href="envsolution.html">Environmental Management Solution</a>
+                    <a href="evacmaps.html">Evacuation Maps</a> 
+                    <a href="envsolution.html" class="active">Environmental Management Solution</a>   <!-- Indicates currently active page -->
                     <a href="sheqsystem.html">SHEQ Management System</a>
                     <a href="opsmaps.html">Operational Maps</a>
                     <a href="basemaps.html">Basemaps</a>
