--- a/evacmaps.html
+++ b/evacmaps.html
@@ -35,7 +35,7 @@
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Solution</button>
-                <!-- Methodology dropdown menu content -->
+                <!-- Solutions dropdown menu content -->
                 <div class="dropdown-content">
                     <a href="evacmaps.html" class="active">Evacuation Maps</a>   <!-- Indicates currently active page -->
                     <a href="envsolution.html">Environmental Management Solution</a>
