--- a/training.html
+++ b/training.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Environmental Management Solution</title>
+        <title>Training</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon Icon is taken from https://www.flaticon.com/ -->
         <link rel="icon" href="assets/penguin.png">
@@ -38,13 +38,13 @@
                 <!-- Solutions dropdown menu content -->
                 <div class="dropdown-content">
                     <a href="evacmaps.html">Evacuation Maps</a> 
-                    <a href="envsolution.html" class="active">Environmental Management Solution</a>   <!-- Indicates currently active page -->
+                    <a href="envsolution.html">Environmental Management Solution</a>
                     <a href="sheqsystem.html">SHEQ Management System</a>
                     <a href="opsmaps.html">Operational Maps</a>
                     <a href="basemaps.html">Basemaps</a>
                     <a href="backup.html">Backup Script</a>
                     <a href="mapviewer.html">Campus Map Viewer</a>
-                    <a href="training.html">Training</a>
+                    <a href="training.html" class="active">Training</a>  <!-- Indicates currently active page -->
                 </div> 
             </div>
             <a href="team.html">Meet the Team</a>
