--- a/envsolution.html
+++ b/envsolution.html
@@ -52,7 +52,7 @@
 
         <!--NAVBAR END-->
 
-        <h1> ArcGIS Online Methodology</h1>
+        <h1> Environmental Management Solution</h1>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
@@ -60,7 +60,7 @@
                 </div>
             </div>  
         </div>
-    
+        <h2> Environmental Management Solution Methodology</h2>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
             <button type = "button" class="ExpandingButton">Step 1: Build the surveys</button>
