--- a/evacmaps.html
+++ b/evacmaps.html
@@ -52,19 +52,36 @@
 
         <!--NAVBAR END-->
 
-        <h1> ArcGIS Online Methodology</h1>
+        <h1>Evacuation Maps</h1>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                    <img src="assets/EvacuationMap_1.png" alt="Evac Map 1" class="img-small">
+                </div>
+            </div>  
+        </div>
+            <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/EvacuationMap_2.png" alt="Evac Map 2" class="img-small">
+                </div>
+            </div>  
+        </div>
+
+        <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/EvacuationMap_3.png" alt="Evac Map 3" class="img-small">
                 </div>
             </div>  
         </div>
 
     <div class="wrapped-text-box-home">
         <div class="home">
-    <p>The Southern African Wildlife College requested evacuation maps to be created. These maps would be placed in each room to show where the nearest assembly point and fire equipment is located. 
-        A red line showing the route would either be annotated on the map with the software or with a pen/marker. </p>
+    <p>The Southern African Wildlife College requested evacuation maps to be created. These would be printed and displayed in the respective room. 
+        The symbology needed to be greyscale, as there is limited access to colour printers. The routes are the only element shown in colour to establish visual hierarchy.
+        Using QGIS Map Atlas, nine PDFs maps were created, three of which are shown above. 
+     </p>
         </div>
     </div>
 
@@ -124,7 +141,13 @@
         </div>
         <!--Accordion Button end-->	
 
-
+        <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                </div>
+            </div>  
+        </div>
 
 
         <!-- JS script for hamburger menu animation and responsive navbar -->
