--- a/evacmaps.html
+++ b/evacmaps.html
@@ -56,14 +56,14 @@
       <div class= "pictrow">
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/EvacuationMap_1.png" alt="Evac Map 1" class="img-small">
+                    <img src="assets/EvacuationMap_1.png" alt="Evac Map 1"">
                 </div>
             </div>  
 </div>  
       <div class= "pictrow">
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/EvacuationMap_2.png" alt="Evac Map 2" class="img-small">
+                    <img src="assets/EvacuationMap_2.png" alt="Evac Map 2"">
                 </div>
             </div>  
    
@@ -71,7 +71,7 @@
        <div class= "pictrow">
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/EvacuationMap_3.png" alt="Evac Map 3" class="img-small">
+                    <img src="assets/EvacuationMap_3.png" alt="Evac Map 3"">
                 </div>
             </div>  
 </div>  
