--- a/mapviewer.html
+++ b/mapviewer.html
@@ -53,27 +53,20 @@
         <!--NAVBAR END-->
 
         <h1>Campus Map Viewer</h1>
-        <div class= "pictrow"> 
-            <div class= "pictcolumn">
-                <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
-                </div>
-            </div>  
-        </div>
         <!-- Slideshow container -->
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="img1.jpg" style="width:100%">
-            <div class="text">Caption Text</div>
+            <img src="assets/campusviewer1.PNG" style="width:100%">
+            <div class="text">Page 1 of the Campus Viewer Solution</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="img2.jpg" style="width:100%">
-            <div class="text">Caption Two</div>
+            <img src="assets/campusviewer2.PNG" style="width:100%">
+            <div class="text">Page 2 of the Campus Viewer Solution</div>
             </div>
         
             <div class="mySlides fade">
@@ -124,7 +117,13 @@
         </div>
         <!--Accordion Button end-->	
 
-
+        <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                </div>
+            </div>  
+        </div>
 
 
         <!-- JS script for hamburger menu animation and responsive navbar -->
