--- a/opsmaps.html
+++ b/opsmaps.html
@@ -97,6 +97,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
