--- a/opsmaps.html
+++ b/opsmaps.html
@@ -53,13 +53,6 @@
         <!--NAVBAR END-->
 
         <h1> ArcGIS Online Methodology</h1>
-        <div class= "pictrow"> 
-            <div class= "pictcolumn">
-                <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
-                </div>
-            </div>  
-        </div>
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
@@ -99,6 +92,15 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
+
+        <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                </div>
+            </div>  
+        </div>
+        <h2> Operational Map Methodology</h2>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
             <button type = "button" class="ExpandingButton">Step 1: Deploy ArcGIS Solution</button>
