--- a/backup.html
+++ b/backup.html
@@ -53,12 +53,10 @@
         <!--NAVBAR END-->
 
         <h1> Backup Script </h1>
-        <div class="wrapped-text-box-home">
-        <div class="home">
+        <div class="paragraphStyling">
     <p>Many data layers are constantly being updated and moved. A method to backup essential data is crucial to sustaining the Southern African Wildlife College’s GIS. ArcGIS Notebooks provides an easy-to-use interface to automate processes. 
         It runs on ArcGIS Online (AGOL), making it easy to access data. This can be set as a task to be run as needed or run manually.
      </p>
-        </div>
     </div>
     
         <!--Accordion Button Start-->	
