--- a/backup.html
+++ b/backup.html
@@ -54,12 +54,12 @@
 
         <h1> Backup Script </h1>
 
-    <div class="paragraphStyling">
-        <div class = "home">
+    <div id="paragraphStyling">
+
     <p>Many data layers are constantly being updated and moved. A method to backup essential data is crucial to sustaining the Southern African Wildlife College’s GIS. ArcGIS Notebooks provides an easy-to-use interface to automate processes. 
         It runs on ArcGIS Online (AGOL), making it easy to access data. This can be set as a task to be run as needed or run manually.
      </p>
-    </div>
+
     </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
