--- a/evacmaps.html
+++ b/evacmaps.html
@@ -90,13 +90,13 @@
         </div>
       
 
-    <div class="wrapped-text-box-home">
-        <div class="home">
+    <div id = "paragraphStyle">
+
     <p>The Southern African Wildlife College requested evacuation maps to be created. These would be printed and displayed in the respective room. 
         The symbology needed to be greyscale, as there is limited access to colour printers. The routes are the only element shown in colour to establish visual hierarchy.
         Using QGIS Map Atlas, nine PDFs maps were created, three of which are shown above. 
      </p>
-        </div>
+
     </div>
 
         <!--Accordion Button Start-->	
