--- a/mapviewer.html
+++ b/mapviewer.html
@@ -95,6 +95,12 @@
         </div>
        
         <h2> Campus Map Viewer Methodology</h2>
+        <div class="wrapped-text-box-home">
+            <div class="home">
+        <p> Some description here 
+         </p>
+            </div>
+        </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
             <button type = "button" class="ExpandingButton">Step 1: Create New Basemaps</button>
