--- a/evacmaps.html
+++ b/evacmaps.html
@@ -90,7 +90,7 @@
         </div>
       
 
-    <div id = "paragraphStyle">
+    <div class = "paragraphStyle">
 
     <p>The Southern African Wildlife College requested evacuation maps to be created. These would be printed and displayed in the respective room. 
         The symbology needed to be greyscale, as there is limited access to colour printers. The routes are the only element shown in colour to establish visual hierarchy.
