--- a/backup.html
+++ b/backup.html
@@ -54,7 +54,7 @@
 
         <h1> Backup Script </h1>
 
-    <div id="paragraphStyle">
+    <div class="paragraphStyle">
 
     <p>Many data layers are constantly being updated and moved. A method to backup essential data is crucial to sustaining the Southern African Wildlife College’s GIS. ArcGIS Notebooks provides an easy-to-use interface to automate processes. 
         It runs on ArcGIS Online (AGOL), making it easy to access data. This can be set as a task to be run as needed or run manually.
