--- a/opsmaps.html
+++ b/opsmaps.html
@@ -58,25 +58,25 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
             <div class="numbertext">1 / 4</div>
-            <img src="assets/WaterOperationalMap.PNG" style="width:100%">
+            <img src="assets/operation_water.PNG" style="width:100%">
             <div class="text">Water Operational Map</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
-            <img src="assets/sewagemap.PNG" style="width:100%">
+            <img src="assets/operation_sewage.PNG" style="width:100%">
             <div class="text">Sewage operational <Map></Map></div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="assets/NewWiFI.PNG" style="width:100%">
+            <img src="assets/Operation_sewage.PNG" style="width:100%">
             <div class="text">Wi-Fi operational Map</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
-                <img src="assets/electrical.PNG" style="width:100%">
+                <img src="assets/operation_electrical.PNG" style="width:100%">
                 <div class="text">electrical operational Map</div>
                 </div>
             <!-- Next and previous buttons -->
@@ -155,7 +155,7 @@
             <div class="footertext">
                 <p>Copyright of Purple Penguins, 2024.</p>
             </div>
-            <!-- Clicking on the cicle brings you to the home page -->
+            <!-- Clicking on the circle brings you to the home page -->
             <div class="centericon">
                 <a href="index.html" class="fab fa-circle" title="Purple Penguins Logo Color"></a>
             </div>
