--- a/opsmaps.html
+++ b/opsmaps.html
@@ -101,13 +101,12 @@
             </div>  
         </div>
         <h2> Operational Map Methodology</h2>
-        <div class="wrapped-text-box-home">
-            <div class="home">
+        
+        <div class = "paragraphStyle">
         <p>The Southern African Wildlife College requested Operational Maps be created so that the maintenance staff could easily access the relevant operational data. 
             4 maps were created that 
             included water network data, sewage network data, electrical network data and Wi-Fi points on campus.   
          </p>
-            </div>
         </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
