--- a/opsmaps.html
+++ b/opsmaps.html
@@ -58,25 +58,25 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
             <div class="numbertext">1 / 4</div>
-            <img src="assets/operation_water.PNG" style="width:100%">
+            <img src="assets/operations_water.PNG" style="width:100%">
             <div class="text">Water Operational Map</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
-            <img src="assets/operation_sewage.PNG" style="width:100%">
+            <img src="assets/operations_sewage.PNG" style="width:100%">
             <div class="text">Sewage operational <Map></Map></div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="assets/Operation_sewage.PNG" style="width:100%">
+            <img src="assets/Operations_wifi.PNG" style="width:100%">
             <div class="text">Wi-Fi operational Map</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
-                <img src="assets/operation_electrical.PNG" style="width:100%">
+                <img src="assets/operations_electrical.PNG" style="width:100%">
                 <div class="text">electrical operational Map</div>
                 </div>
             <!-- Next and previous buttons -->
