--- a/opsmaps.html
+++ b/opsmaps.html
@@ -65,7 +65,7 @@
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
             <img src="assets/operations_sewage.PNG" style="width:100%">
-            <div class="text">Sewage operational <Map></Map></div>
+            <div class="text">Sewage operational Map </div>
             </div>
         
             <div class="mySlides fade">
