--- a/team.html
+++ b/team.html
@@ -41,13 +41,13 @@
                     <a href="envsolution.html">Environmental Management Solution</a>
                     <a href="sheqsystem.html">SHEQ Management System</a> 
                     <a href="opsmaps.html">Operational Maps</a> 
-                    <a href="basemaps.html" class="active">Basemaps</a>  <!-- Indicates currently active page -->
+                    <a href="basemaps.html">Basemaps</a>  
                     <a href="backup.html">Backup Script</a>
                     <a href="mapviewer.html">Campus Map Viewer</a>
                     <a href="training.html">Training</a> 
                 </div> 
             </div>
-            <a href="team.html">Meet the Team</a>
+            <a href="team.html" class="active">Meet the Team</a> <!-- Indicates currently active page -->
         </div>
         <!--NAVBAR END-->
 
