--- a/opsmaps.html
+++ b/opsmaps.html
@@ -59,25 +59,25 @@
             <div class="mySlides fade">
             <div class="numbertext">1 / 4</div>
             <img src="assets/operations_water.PNG" alt="Water Operational Map" style="width:100%">
-            <div class="text">Water Operational Map</div>
+            <div class="textops">Water Operational Map</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
             <img src="assets/operations_sewage.PNG" alt="Sewage Operational Map" style="width:100%">
-            <div class="text">Sewage Operational Map </div>
+            <div class="textops">Sewage Operational Map </div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
             <img src="assets/Operations_wifi.PNG" alt="WiFi Operational Map" style="width:100%">
-            <div class="text">Wi-Fi Operational Map</div>
+            <div class="textops">Wi-Fi Operational Map</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
                 <img src="assets/operations_electrical.PNG" alt="Electrical Operational Map" style="width:100%">
-                <div class="text">Electrical Operational Map</div>
+                <div class="textops">Electrical Operational Map</div>
                 </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
