--- a/opsmaps.html
+++ b/opsmaps.html
@@ -92,7 +92,10 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
-
+        
+        <div class = "paragraphStyle">
+            <p>Above are static image versions of the Web Maps delivered for the college and are not interactive.   
+             </p>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
