--- a/opsmaps.html
+++ b/opsmaps.html
@@ -96,6 +96,7 @@
         <div class = "paragraphStyle">
             <p>Above are static image versions of the Web Maps delivered for the college and are not interactive.   
              </p>
+        </div>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
