adding a new parapgraph

--- a/opsmaps.html
+++ b/opsmaps.html
@@ -93,7 +93,7 @@
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
         
-        <div class = "paragraphStyle">
+        <div class = "paragraphStyle2">
             <p>Above are static image versions of the Web Maps delivered for the college and are not interactive.   
              </p>
         </div>
