--- a/basemaps.html
+++ b/basemaps.html
@@ -56,7 +56,7 @@
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                    <img src="assets/BasemapFC.jpg" alt="Basemap Flowchart" class="img-small">
                 </div>
             </div>  
         </div>
