--- a/basemaps.html
+++ b/basemaps.html
@@ -51,7 +51,8 @@
         </div>
 
         <!--NAVBAR END-->
-    
+
+        <!--SLIDESHOW START-->
         <h1> SAWC Basemap </h1>
         <div class="slideshow-container">
 
@@ -73,7 +74,39 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
+        <!--SLIDESHOW END-->
+
+
+        <!--SLIDESHOW START-->
+        <h1> SAWC Navigation Maps for Reception Use </h1>
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+            <div class="numbertext">1 / 4</div>
+            <img src="assets/Basemap_Layout_Labeled.png" style="width:100%">
+            <div class="text"> SAWC Navigation Map for Reception Use - Labeled</div>
+            </div>
         
+            <div class="mySlides fade">
+            <div class="numbertext">2 / 4</div>
+            <img src="assets/ZoomedInBasemap.png" style="width:100%">
+            <div class="text"> Close-Up Labeled Navigation Map </div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img src="assets/Basemap_Layout_NoLabels.png" style="width:100%">
+                <div class="text"> SAWC Navigation Map for Reception Use - Without Labels </div>
+                </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+        <!--SLIDESHOW END-->
+
         <h1> Basemap Flowchart </h1>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
