Basemap Page Chagnes

--- a/basemaps.html
+++ b/basemaps.html
@@ -58,13 +58,13 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-            <div class="numbertext">1 / 4</div>
+            <div class="numbertext">1 / 2</div>
             <img src="assets/BasemapGDB.png" style="width:100%">
             <div class="text"> SAWC Basemap GeoDatabase - ArcGIS Pro</div>
             </div>
         
             <div class="mySlides fade">
-            <div class="numbertext">2 / 4</div>
+            <div class="numbertext">2 / 2</div>
             <img src="assets/Basemap.png" style="width:100%">
             <div class="text"> SAWC Basemap </div>
             </div>
@@ -90,19 +90,19 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-            <div class="numbertext">1 / 4</div>
+            <div class="numbertext">1 / 3</div>
             <img src="assets/Basemap_Layout_Labeled.png" style="width:100%">
             <div class="text"> SAWC Navigation Map for Reception Use - Labeled</div>
             </div>
         
             <div class="mySlides fade">
-            <div class="numbertext">2 / 4</div>
+            <div class="numbertext">2 / 3</div>
             <img src="assets/ZoomedInBasemap.png" style="width:100%">
             <div class="text"> Close-Up Labeled Navigation Map </div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">3 / 4</div>
+                <div class="numbertext">3 / 3</div>
                 <img src="assets/Basemap_Layout_NoLabels.png" style="width:100%">
                 <div class="text"> SAWC Navigation Map for Reception Use - Without Labels </div>
                 </div>
@@ -117,11 +117,10 @@
         <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
-
         </div>
-
         <!--SLIDESHOW END-->
 
+        <!--FLOWCHART START-->
         <h1> Basemap Flowchart </h1>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
@@ -130,6 +129,7 @@
                 </div>
             </div>  
         </div>
+        <!--FLOWCHART END-->
 
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
