--- a/basemaps.html
+++ b/basemaps.html
@@ -54,7 +54,7 @@
 
         <!--SLIDESHOW START-->
         <h1> SAWC Basemap </h1>
-        <div class="slideshow-container">
+        <div class="slideshow-container" id="slideshow1">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
@@ -85,37 +85,38 @@
 
         <!--SLIDESHOW START-->
         <h1> SAWC Navigation Maps for Reception Use </h1>
-        <div class="slideshow-container">
+        <div class="slideshow-container" id="slideshow2">
 
             <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
+            <div class="mySlides2 fade">
             <div class="numbertext">1 / 3</div>
             <img src="assets/Basemap_Layout_Labeled.png" style="width:100%">
             <div class="text"> SAWC Navigation Map for Reception Use - Labeled</div>
             </div>
         
-            <div class="mySlides fade">
+            <div class="mySlides2 fade">
             <div class="numbertext">2 / 3</div>
             <img src="assets/ZoomedInBasemap.png" style="width:100%">
             <div class="text"> Close-Up Labeled Navigation Map </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="mySlides2 fade">
             <div class="numbertext">3 / 3</div>
             <img src="assets/Basemap_Layout_NoLabels.png" style="width:100%">
             <div class="text"> SAWC Navigation Map for Reception Use - Without Labels </div>
             </div>
 
             <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides2(1)">&#10095;</a>
         </div>
         <br>
 
         <!-- The dots/circles -->
         <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot2" onclick="currentSlide2(1)"></span>
+            <span class="dot2" onclick="currentSlide2(2)"></span>
+            <span class="dot2" onclick="currentSlide2(3)"></span>
         </div>
         <!--SLIDESHOW END-->
 
