--- a/envsolution.html
+++ b/envsolution.html
@@ -58,28 +58,34 @@
 
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="assets/campusviewer1.PNG" alt="Page 1 of the Campus Viewer Solution" style="width:100%">
-        <div class="text">Page 1 of the Campus Viewer Solution</div>
+        <div class="numbertext">1 / 5</div>
+        <img src="assets/EMS1.png" alt="Page 1 of the Environmental Management Solution" style="width:100%">
+        <div class="text">Page 1 of the Environmental Management Solution</div>
         </div>
     
         <div class="mySlides fade">
-        <div class="numbertext">2 / 4</div>
-        <img src="assets/campusmapviewer3.PNG" alt="Search for a building on the map viewer" style="width:100%">
-        <div class="text">Search for a building on the map viewer</div>
+        <div class="numbertext">2 / 5</div>
+        <img src="assets/EMS2.png" alt="Page 2 of the Environmental Management Solution" style="width:100%">
+        <div class="text">Page 2 of the Environmental Management Solution</div>
         </div>
     
         <div class="mySlides fade">
-        <div class="numbertext">3 / 4</div>
-        <img src="assets/campusmapviewer4.PNG" alt="Search for a room on the map viewer" style="width:100%">
-        <div class="text">Search for a room on the map viewer</div>
+        <div class="numbertext">3 / 5</div>
+        <img src="assets/EMS3.png" alt="Page 3 of the Environmental Management Solution" style="width:100%">
+        <div class="text">Page 3 of the Environmental Management Solution</div>
         </div>
 
         <div class="mySlides fade">
-            <div class="numbertext">4 / 4</div>
-            <img src="assets/campusviewer2.PNG" alt="Page 2 of the Campus Viewer Solution" style="width:100%">
-            <div class="text">Page 2 of the Campus Viewer Solution</div>
+            <div class="numbertext">4 / 5</div>
+            <img src="assets/EMS4.PNG" alt="Page 4 of the Environmental Management Solution" style="width:100%">
+            <div class="text">Page 4 of the Environmental Management Solution</div>
             </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 5</div>
+                <img src="assets/EMS5.PNG" alt="Page 5 of the Environmental Management Solution" style="width:100%">
+                <div class="text">Page 5 of the Environmental Management Solution</div>
+                </div>
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -92,6 +98,7 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
     </div>
    
         <h2> Environmental Management Solution Methodology</h2>
