--- a/opsmaps.html
+++ b/opsmaps.html
@@ -52,7 +52,7 @@
 
         <!--NAVBAR END-->
 
-        <h1> ArcGIS Online Methodology</h1>
+        <h1> Operational Maps</h1>
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
@@ -97,6 +97,7 @@
             <p>Above are static image versions of the Web Maps delivered for the college and are not interactive.   
              </p>
         </div>
+        <h2> Operational Map Flowchart</h2>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
