--- a/envsolution.html
+++ b/envsolution.html
@@ -121,6 +121,11 @@
         </div>
 
         <h2> Environmental Management Solution Methodology</h2>
+        <div class="paragraphStyle2">
+
+            <p>Text
+             </p>
+        </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
             <button type = "button" class="ExpandingButton">Step 1: Build the surveys</button>
