--- a/mapviewer.html
+++ b/mapviewer.html
@@ -95,11 +95,10 @@
         </div>
        
         <h2> Campus Map Viewer Methodology</h2>
-        <div class="wrapped-text-box-home">
-            <div class="home">
-        <p> Some description here 
-         </p>
-            </div>
+        <div class="paragraphStyle2">
+
+            <p>Text
+             </p>
         </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
