--- a/envsolution.html
+++ b/envsolution.html
@@ -101,7 +101,7 @@
         <span class="dot" onclick="currentSlide(5)"></span>
     </div>
     <div class = "paragraphStyle2">
-        <p>Above are static image versions of the Environmental Management Solution for the college and are not interactive.  </p>
+        <p>Above are static image versions of the Environmental Management Solution Experience Builder and are not interactive.  </p>
         
         <ul>
             <li> The first page of the slide deck is the home page os the solution. The first box outlines the number of alien species recorded on campus and the second is the number of native trees found on campus (Note: the numbers shown are test numbers).</li>
