--- a/envsolution.html
+++ b/envsolution.html
@@ -118,7 +118,9 @@
         <h2> Environmental Management Solution Methodology</h2>
         <div class="paragraphStyle2">
 
-            <p>Text
+            <p> One solution developed is an Environmental Management Solution to help track and report progress on 
+                alien invasive species and native trees on campus. This solution was designed to have an open method of collecting data and 
+                an interactive solution to display this data. This solution uses the Esri products of Survey123, Field Maps, Dashboards, Experience Builder and Web Maps.
              </p>
         </div>
         <!--Accordion Button Start-->	
