--- a/opsmaps.html
+++ b/opsmaps.html
@@ -101,7 +101,7 @@
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                    <img src="assets/OperationFlowchart.jpg" alt="Operational Map Flowchart" class="img-small">
                 </div>
             </div>  
         </div>
