--- a/envsolution.html
+++ b/envsolution.html
@@ -110,7 +110,7 @@
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/EMSFlowchart.JPG" alt="Environmental Management Solutions Flowchart" class="img-small">
+                    <img src="assets/EMSFlowchart.jpg" alt="Environmental Management Solutions Flowchart" class="img-small">
                 </div>
             </div>  
         </div>
