--- a/mapviewer.html
+++ b/mapviewer.html
@@ -93,7 +93,16 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
-       
+        <h2> Campus Map Viewer Flowchart</h2>
+        <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/CampusViewerFlowchart.jpg" alt="Campus Map Viewer Solutions Flowchart" class="img-small">
+                </div>
+            </div>  
+        </div>
+
+
         <h2> Campus Map Viewer Methodology</h2>
         <div class="paragraphStyle2">
 
@@ -127,15 +136,6 @@
          
         </div>
         <!--Accordion Button end-->	
-
-        <div class= "pictrow"> 
-            <div class= "pictcolumn">
-                <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
-                </div>
-            </div>  
-        </div>
-
 
         <!-- JS script for hamburger menu animation and responsive navbar -->
         <script src="js/script.js"></script>
