--- a/mapviewer.html
+++ b/mapviewer.html
@@ -60,25 +60,25 @@
             <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
             <img src="assets/campusviewer1.PNG" alt="Page 1 of the Campus Viewer Solution" style="width:100%">
-            <div class="text">Page 1 of the Campus Viewer Solution</div>
+            <div class="textCMV">Page 1 of the Campus Viewer Solution</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
             <img src="assets/campusmapviewer3.PNG" alt="Search for a building on the map viewer" style="width:100%">
-            <div class="text">Search for a building on the map viewer</div>
+            <div class="textCMV">Search for a building on the map viewer</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
             <img src="assets/campusmapviewer4.PNG" alt="Search for a room on the map viewer" style="width:100%">
-            <div class="text">Search for a room on the map viewer</div>
+            <div class="textCMV">Search for a room on the map viewer</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
                 <img src="assets/campusviewer2.PNG" alt="Page 2 of the Campus Viewer Solution" style="width:100%">
-                <div class="text">Page 2 of the Campus Viewer Solution</div>
+                <div class="textCMV">Page 2 of the Campus Viewer Solution</div>
                 </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -93,6 +93,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
+
         <h2> Campus Map Viewer Flowchart</h2>
         <div class= "pictrow"> 
             <div class= "pictcolumn">
