adding dots on the slides Basemap Page

--- a/basemaps.html
+++ b/basemaps.html
@@ -54,7 +54,7 @@
 
         <!--SLIDESHOW START-->
         <h1> SAWC Basemap </h1>
-        <div class="slideshow-container" id="slideshow1">
+        <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
@@ -85,7 +85,7 @@
 
         <!--SLIDESHOW START-->
         <h1> SAWC Navigation Maps for Reception Use </h1>
-        <div class="slideshow-container" id="slideshow2">
+        <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides2 fade">
