image name change

--- a/mapviewer.html
+++ b/mapviewer.html
@@ -65,13 +65,13 @@
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
-            <img src="assets/campusmapviewer3.PNG" alt="Search for a building on the map viewer" style="width:100%">
+            <img src="assets/campusviewer3.PNG" alt="Search for a building on the map viewer" style="width:100%">
             <div class="textCMV">Search for a building on the map viewer</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="assets/campusmapviewer4.PNG" alt="Search for a room on the map viewer" style="width:100%">
+            <img src="assets/campusviewer4.PNG" alt="Search for a room on the map viewer" style="width:100%">
             <div class="textCMV">Search for a room on the map viewer</div>
             </div>
 
