--- a/mapviewer.html
+++ b/mapviewer.html
@@ -59,25 +59,25 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="assets/campusviewer1.PNG" alt="Page 1 of the Campus Viewer Solution" style="width:100%">
+            <img src="assets/campusviewer1.png" alt="Page 1 of the Campus Viewer Solution" style="width:100%">
             <div class="textCMV">Page 1 of the Campus Viewer Solution</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
-            <img src="assets/campusviewer3.PNG" alt="Search for a building on the map viewer" style="width:100%">
+            <img src="assets/campusviewer3.png" alt="Search for a building on the map viewer" style="width:100%">
             <div class="textCMV">Search for a building on the map viewer</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="assets/campusviewer4.PNG" alt="Search for a room on the map viewer" style="width:100%">
+            <img src="assets/campusviewer4.png" alt="Search for a room on the map viewer" style="width:100%">
             <div class="textCMV">Search for a room on the map viewer</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
-                <img src="assets/campusviewer2.PNG" alt="Page 2 of the Campus Viewer Solution" style="width:100%">
+                <img src="assets/campusviewer2.png" alt="Page 2 of the Campus Viewer Solution" style="width:100%">
                 <div class="textCMV">Page 2 of the Campus Viewer Solution</div>
                 </div>
             <!-- Next and previous buttons -->
@@ -107,8 +107,6 @@
         <h2> Campus Map Viewer Methodology</h2>
         <div class="paragraphStyle2">
 
-            <p>Text
-             </p>
         </div>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
