changed the width of the flow chart

--- a/mapviewer.html
+++ b/mapviewer.html
@@ -98,7 +98,7 @@
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/CampusViewerFlowchart.jpg" alt="Campus Map Viewer Solutions Flowchart" class="img-small">
+                    <img src="assets/CampusViewerFlowchart.jpg" alt="Campus Map Viewer Solutions Flowchart" class="width:100%">
                 </div>
             </div>  
         </div>
