--- a/training.html
+++ b/training.html
@@ -69,7 +69,7 @@
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="assets/workforce.png" alt="ArcGIS Workforce Training Documentation" style="width:100%">
+            <img src="assets/Workforce.png" alt="ArcGIS Workforce Training Documentation" style="width:100%">
             </div>
 
             <!-- Next and previous buttons -->
