--- a/sheqsystem.html
+++ b/sheqsystem.html
@@ -76,7 +76,12 @@
              <div class="numbertext">4 / 5</div>
              <img src="" alt="Page 4 of the SHEQ Management Solution" style="width:100%">
              </div>
- 
+
+        <div class="mySlides fade">
+            <div class="numbertext">5 / 5</div>
+                <img src="assets/EMS5.PNG" alt="Page 5 of the Environmental Management Solution" style="width:100%">
+            </div>
+
          <!-- Next and previous buttons -->
          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
          <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -89,6 +94,7 @@
          <span class="dot" onclick="currentSlide(2)"></span>
          <span class="dot" onclick="currentSlide(3)"></span>
          <span class="dot" onclick="currentSlide(4)"></span>
+                 <span class="dot" onclick="currentSlide(5)"></span>
      </div>
      <div class = "paragraphStyle2">
          <p>Above are static image versions of the SHEQ Management System Experience Builder and are not interactive.  </p>
