--- a/sheqsystem.html
+++ b/sheqsystem.html
@@ -59,27 +59,27 @@
          <!-- Full-width images with number and caption text -->
          <div class="mySlides fade">
          <div class="numbertext">1 / 5</div>
-         <img src="" alt="Page 1 of the SHEQ Management System" style="width:100%">
+         <img src="assets/SHEQ1.png" alt="Page 1 of the SHEQ Management System" style="width:100%">
          </div>
      
          <div class="mySlides fade">
          <div class="numbertext">2 / 5</div>
-         <img src="" alt="Page 2 of the SHEQ Management System" style="width:100%">
+         <img src="assets/SHEQ2.png" alt="Page 2 of the SHEQ Management System" style="width:100%">
          </div>
      
          <div class="mySlides fade">
          <div class="numbertext">3 / 5</div>
-         <img src="" alt="Page 3 of the SHEQ Management System" style="width:100%">
+         <img src="assets/SHEQ3.png" alt="Page 3 of the SHEQ Management System" style="width:100%">
          </div>
  
          <div class="mySlides fade">
              <div class="numbertext">4 / 5</div>
-             <img src="" alt="Page 4 of the SHEQ Management Solution" style="width:100%">
+             <img src="assets/SHEQ4.png" alt="Page 4 of the SHEQ Management Solution" style="width:100%">
              </div>
 
         <div class="mySlides fade">
             <div class="numbertext">5 / 5</div>
-                <img src="assets/EMS5.PNG" alt="Page 5 of the Environmental Management Solution" style="width:100%">
+                <img src="assets/SHEQ5.png" alt="Page 5 of the Environmental Management Solution" style="width:100%">
             </div>
 
          <!-- Next and previous buttons -->
