updates to SHEQ

--- a/sheqsystem.html
+++ b/sheqsystem.html
@@ -100,11 +100,11 @@
          <p>Above are static image versions of the SHEQ Management System Experience Builder and are not interactive.  </p>
          
          <ul>
-             <li> The first page of the slide deck is the home page os the solution. The first box outlines the number of alien species recorded on campus and the second is the number of native trees found on campus (Note: the numbers shown are test numbers).</li>
-             <li> The second page of the slide deck shows the Alien Invasive Species Dashboard, that is embedded into the solution. </li>
-             <li> The third page shows the Native Tree Species Dashboard, that is embedded into the solution.</li>
-             <li> The forth page shows the Water Network Operation Map, that is embedded into the solution.</li>
-             <li> The fifth page shows the Sewage Network Operational Map, that is embedded into the solution.</li>
+             <li> The first page of the slide deck is the home page of the solution. The first box outlines the number of requst surveys that have been submitted and the second is the number tasks created but not yet assigned to a staff member</li>
+             <li> The second page of the slide deck shows the manage screen. From here, a feature can be selected, and it can be edited in the editor panel</li>
+             <li> The third page shows the manage page with a feature selected. The editor panel is used for admins to update the status of a request, document who it was assigned to, add the form id, date the issue was resolved and any comments</li>
+             <li> The forth page shows the dashboard, that is embedded into the solution. Admins can monitor tasks and assess productivity.</li>
+             <li> The fifth page shows the assignments page, which is a workforce project embedded into the solution.</li>
          </ul>
      </div>
          <h2> SHEQ Management System Flowchart</h2>
