--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Problem Statement</title>
+        <title>Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon Icon is taken from https://www.flaticon.com/ -->
         <link rel="icon" href="assets/penguin.png">
@@ -66,29 +66,29 @@
             <div class="wrapped-text-box-home">
                 <div class="home">
             
-                    <h1>Southern African Wildlife College: Security, Heath and Safety, Environment and Quality Solution</h1>
+                    <h1>Digital Solutions: Tools to Enhance Southern African Wildlife College's Environment, Maintenance, and Safety Resources</h1>
                     
                     <hr class="rounded">
 
-                    <h2>Problem Statement</h2>
-                    <h3>Ideal</h3>
-                    <p>A centralized platform where anybody can report a problem on campus and then it be assigned to a specific 
-                        person/department depending on the zone and tracked using a dashboard. Generate automated reports to 
-                        summarize problems reported and derive trends.</p>
-                    <h3>Reality</h3>
-                    <p>Right now they collect their data and track it all separately, and they do much of it by paper. There is 
-                        no efficient way to report results, there are many different places they have to look for data. There is 
-                        no way to track productivity and how efficiently tasks are getting done. </p>
-                    <h3>Consequences</h3>
-                    <p>They will not have a centralized way to track issues and progress on their issues and things may fall through 
-                        the cracks. This causes a certain level of risk for the residents on campus in terms of security, heath and 
-                        safety, environment and quality.</p>
-                    <h3>Proposal</h3>
-                    <p>Create a centralized platform that allows the college to assign and track progress for SHEQ (security, health 
-                        and safety, environment, and quality) tasks categorized by pre-designated zones of their campus and level of 
-                        priority. Solution should be easy to use and require minimal or no maintenance.</p>
-                    <h3>Technology Used</h3>
-                    <p>ArcGIS Online Ecosystem (ArcGIS Workforce, FieldMaps, Survey123, ArcGIS Dashboards, Jupyter Notebook), Power Automate, Excel, and OneDrive.</p>
+                    <h2>Project Background</h2>
+                    <p>This project, led by Team Purple Penguins, aimed to enhance the productivity of the various operations on SAWC’s campus through GIS technology. The project was initiated with three main goals in mind: create a system to streamline the reporting of Safety, Health, Environment, and Quality (SHEQ) requests on campus, update the existing campus basemaps and provide comprehensive in person training and supplemental documentation to allow staff to use existing GIS solutions.</p>
+                    <p>As the team worked closely with various staff members during the onsite visit, the project evolved to cover a greater scope of goals. Purple Penguins visited the campus just as they were preparing for an environmental audit. Through this experience, it became clear that the maintenance team is a champion for ensuring these audits go smoothly by tackling various tasks around campus. Invasive plant species needed to be treated either by pulling or cutting, reed needed to be applied to areas for protecting vegetation such tasks. It was apparent that a system was needed for monitoring the prevalence of invasive species and maintaining an inventory of trees providing carbon sequestration. Also, essential operational data, such as the water, sewage, electrical and Wi-Fi was not easily accessible to the maintenance team. </p>
+                    <p></p>
+                    <h2>Client</h2>
+                    <p>SAWC was established in 1996 and became operational in 1997. It was established on land owned by the World Wildlife Fund for Nature, South Africa (WWF-SA) and managed as a contractual National Park by SANParks (Southern African Wildlife College, 2024b). The college is located in Greater Kruger National Park. </p>
+                    <p>SAWC focuses on courses around natural resources management, field ranger training, responsible resources management, community, and youth development, K9 unit, aerial support, and Rural Initiatives for a Sustainable Environment (RISE) (Southern African Wildlife College, 2024a). To date, they have trained over 23,000 students, including 15,000 field rangers from 60 countries and 130 parks (Southern African Wildlife College, 2024a).</p>
+                    <p>While implementing these various systems, it was determined that an automated backup script was required to ensure data safety. As the systems became more complex, Purple Penguins decided to create flowcharts for the handoff of the solutions to ensure the architecture was easily understood. As the project grew, the team insured that supplemental training materials must be provided for each solution to ensure its continued use.</p>
+                    <h2>Study Area</h2>
+                    <p>Purple Penguins found that the current evacuation maps were outdated and not easily accessed from each building. The updates the team provided for campus basemaps needed to be accessible to the staff, stakeholders and students in the form of a web application.</p>
+                    <h3>Objectives</h3>
+                    <p>
+                        <ol>
+                            <li>Facilitate SAWC’s biannual environmental audits by developing a method to collect data and monitor progress. Enable SAWC to distribute tasks efficiently to staff members to prepare for audits and complete general maintenance tasks around campus.</li>
+                            <li>Empower staff to use solutions effectively. Offer training sessions and supplementary training materials on all deliverables to ensure their ongoing use.</li>
+                            <li>Update and maintain current data. Make critical data more accessible to staff and visitors.</li>
+                            <li>Ensure that deliverables are easily understandable and prevent data loss.</li>   
+                        </ol>
+                    </p>
                 </div>
             </div>
         </div>
