--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <p>SAWC focuses on courses around natural resources management, field ranger training, responsible resources management, community, and youth development, K9 unit, aerial support, and Rural Initiatives for a Sustainable Environment (RISE) (Southern African Wildlife College, 2024a). To date, they have trained over 23,000 students, including 15,000 field rangers from 60 countries and 130 parks (Southern African Wildlife College, 2024a).</p>
                     <p>While implementing these various systems, it was determined that an automated backup script was required to ensure data safety. As the systems became more complex, Purple Penguins decided to create flowcharts for the handoff of the solutions to ensure the architecture was easily understood. As the project grew, the team insured that supplemental training materials must be provided for each solution to ensure its continued use.</p>
                     <h2>Study Area</h2>
-                    <p>Purple Penguins found that the current evacuation maps were outdated and not easily accessed from each building. The updates the team provided for campus basemaps needed to be accessible to the staff, stakeholders and students in the form of a web application.</p>
-                    <h3>Objectives</h3>
+                    <p>Southern African Wildlife College Campus is located at Springvalley Farm 200KU Kempiana Nature Reserve, Orpen Road, Hoedspruit, 1380, South Africa.</p>
+                    <h2>Objectives</h2>
                     <p>
                         <ol>
                             <li>Facilitate SAWC’s biannual environmental audits by developing a method to collect data and monitor progress. Enable SAWC to distribute tasks efficiently to staff members to prepare for audits and complete general maintenance tasks around campus.</li>
