--- a/sheqsystem.html
+++ b/sheqsystem.html
@@ -111,7 +111,7 @@
          <div class= "pictrow"> 
              <div class= "pictcolumn">
                  <div class= "picttext">
-                     <img src="assets/SHEQManagement.jpg" alt="SHEQ Management System Flowchart" class="img-small">
+                     <img src="assets/SHEQManagement.jpg" alt="SHEQ Management System Flowchart">
                  </div>
              </div>  
          </div>
