fixed small things on these pages

--- a/evacmaps.html
+++ b/evacmaps.html
@@ -158,7 +158,7 @@
         <div class= "pictrow"> 
             <div class= "pictcolumn">
                 <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="img-small">
+                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="width:100%">
                 </div>
             </div>  
         </div>
