Training page Changes

--- a/training.html
+++ b/training.html
@@ -52,6 +52,7 @@
 
         <!--NAVBAR END-->
 
+        <!--SLIDESHOW START-->
         <h1>Campus Map Viewer</h1>
         <!-- Slideshow container -->
         <div class="slideshow-container">
@@ -84,21 +85,74 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+        <!--SLIDESHOW END-->
+
+        <!--SLIDESHOW START-->
+        <h1> In Person Training at SAWC </h1>
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides2 fade">
+            <div class="numbertext">1 / 4</div>
+            <img src="assets/LilitMaya.jpg" style="width:100%">
+            </div>
+        
+            <div class="mySlides2 fade">
+            <div class="numbertext">2 / 4</div>
+            <img src="assets/KaylaLori.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides2 fade">
+            <div class="numbertext">3 / 4</div>
+            <img src="assets/MayaLilit.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides2 fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="assets/KaylaLori.jpg" style="width:100%">
+                </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides2(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot2" onclick="currentSlide2(1)"></span>
+            <span class="dot2" onclick="currentSlide2(2)"></span>
+            <span class="dot2" onclick="currentSlide2(3)"></span>
+            <span class="dot2" onclick="currentSlide2(4)"></span>
+        </div>
+        <!--SLIDESHOW END-->
     
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
-            <button type = "button" class="ExpandingButton"> Why These Training Documents Were Created</button>
+            <button type = "button" class="ExpandingButton">In Person Training at Southern African Wildlife College</button>
+            <div class="Article">
+                <p> During our time at the college, we conducted hands-on training sessions for the maintenance staff on ArcGIS FieldMaps and WorkForce. 
+                    These sessions demonstrated how easy it is to use these tools and how quickly they can communicate their needs using these applications.
+                    To ensure that the staff and managers at the college can effectively use our solutions, we have created detailed step-by-step documentation for several key applications.
+                    This includes guides for ArcGIS Field Maps, Workforce, and Survey123.                     
+                </p>
+            </div>
+
+            <button type = "button" class="ExpandingButton"> In Person Training at Southern African Wildlife College</button>
             <div class="Article">
                 <p>The team has provided training materials, which will be very helpful for the SAWC team as they will guide them through the application or software step-by-step.
-                     The main purpose of these training materials is to make the SAWC staff more comfortable using the solutions and to enable them to modify these solutions as needed by following the documentation. 
-                     The team created training documents for ArcGIS Field Maps, Survey123, and Workforce. 
+                    The main purpose of these training materials is to make the SAWC staff more comfortable using the solutions and to enable them to modify these solutions as needed by following the documentation. 
+                    The team created training documents for ArcGIS Field Maps, Survey123, and Workforce. 
                     Last year, a group of Fleming College students created wonderful applications for SAWC. 
                     However, because the staff were not trained and did not have documentation to follow,
                     they were unfortunately unable to use the solutions created for them. Thus, this year,
                     the team decided to provide them with documentation as well as in-person training.
-                    During the team’s visit to SAWC, they conducted training sessions for ArcGIS Field Maps and Workforce.
                     The team ensured that the SAWC staff were well-equipped to use the product by providing comprehensive training and documentation.
-                    </p>
+                    Additionally, we have developed application-specific documentation. For example, for evacuation maps,
+                    we provided a comprehensive guide on how to edit them using QGIS.
+                    And for our SHEQ solution, we have a document that explains how to use the solution and how to make changes if needed in the future. These documents are designed to be user-friendly,
+                    enabling the college staff to maintain and modify the solutions as they wish.
+                </p>
             </div>
         </div>
         <!--Accordion Button end-->	
