--- a/training.html
+++ b/training.html
@@ -94,12 +94,12 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides2 fade">
             <div class="numbertext">1 / 2</div>
-            <img src="assets/test1.jpg" style="width:100%">
+            <img src="assets/MayaLilit.jpg" style="width:100%">
             </div>
         
             <div class="mySlides2 fade">
             <div class="numbertext">2 / 2</div>
-            <img src="assets/test2.jpg" style="width:100%">
+            <img src="assets/KaylaLori.jpg" style="width:100%">
             </div>
 
             <!-- Next and previous buttons -->
