--- a/training.html
+++ b/training.html
@@ -93,14 +93,19 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides2 fade">
-            <div class="numbertext">1 / 2</div>
-            <img src="assets/MayaLilit.jpg" style="width:100%">
+            <div class="numbertext">1 / 3</div>
+            <img src="assets/TeamTraining.jpg" style="width:100%">
             </div>
         
             <div class="mySlides2 fade">
-            <div class="numbertext">2 / 2</div>
-            <img src="assets/KaylaLori.jpg" style="width:100%">
+            <div class="numbertext">2 / 3</div>
+            <img src="assets/fieldmapstraining.png" style="width:100%">
             </div>
+
+            <div class="mySlides2 fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="assets/workforcetraining.png" style="width:100%">
+                </div>
 
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
@@ -112,6 +117,7 @@
         <div style="text-align:center">
             <span class="dot2" onclick="currentSlide2(1)"></span>
             <span class="dot2" onclick="currentSlide2(2)"></span>
+            <span class="dot2" onclick="currentSlide2(3)"></span>
         </div>
         <!--SLIDESHOW END-->
     
