--- a/training.html
+++ b/training.html
@@ -53,7 +53,7 @@
         <!--NAVBAR END-->
 
         <!--SLIDESHOW START-->
-        <h1>Campus Map Viewer</h1>
+        <h1>Training Materials</h1>
         <!-- Slideshow container -->
         <div class="slideshow-container">
 
@@ -94,7 +94,7 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides2 fade">
             <div class="numbertext">1 / 3</div>
-            <img src="assets/TeamTraining.jpg" style="width:100%">
+            <img src="assets/TeamTraining1.jpg" style="width:100%">
             </div>
         
             <div class="mySlides2 fade">
