--- a/training.html
+++ b/training.html
@@ -132,7 +132,7 @@
                 </p>
             </div>
 
-            <button type = "button" class="ExpandingButton"> In Person Training at Southern African Wildlife College</button>
+            <button type = "button" class="ExpandingButton"> Why Did The Team Decide To Create These Training Documentations?</button>
             <div class="Article">
                 <p>The team has provided training materials, which will be very helpful for the SAWC team as they will guide them through the application or software step-by-step.
                     The main purpose of these training materials is to make the SAWC staff more comfortable using the solutions and to enable them to modify these solutions as needed by following the documentation. 
