--- a/evacmaps.html
+++ b/evacmaps.html
@@ -96,9 +96,16 @@
         The symbology needed to be greyscale, as there is limited access to colour printers. The routes are the only element shown in colour to establish visual hierarchy.
         Using QGIS Map Atlas, nine PDFs maps were created, three of which are shown above. 
      </p>
-
+<h2>Evacuation Map Flowchart</h2>
     </div>
-
+         <div class= "pictrow"> 
+            <div class= "pictcolumn">
+                <div class= "picttext">
+                    <img src="assets/Evac_FlowChart.jpg" alt="Evacuation Flowchart" class="width:100%">
+                </div>
+            </div>  
+        </div>
+<h2>Evacuation Map Methodology</h2>
         <!--Accordion Button Start-->	
         <div id = "containerAGOL">
             <button type = "button" class="ExpandingButton">Step 1: Acquiring Data</button>
@@ -155,13 +162,7 @@
         </div>
         <!--Accordion Button end-->	
 
-        <div class= "pictrow"> 
-            <div class= "pictcolumn">
-                <div class= "picttext">
-                    <img src="assets/AGOLSolutionsedit.png" alt="AGOL Solutions Flowchart" class="width:100%">
-                </div>
-            </div>  
-        </div>
+       
 
 
         <!-- JS script for hamburger menu animation and responsive navbar -->
