--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
             <div class="wrapped-text-box">
                 <h2>Study Area</h2>
                 <p>Southern African Wildlife College Campus is located at Springvalley Farm 200KU Kempiana Nature Reserve, Orpen Road, Hoedspruit, 1380, South Africa.</p>
+                <div class= "pictrow"> 
+                    <div class= "pictcolumn">
+                        <div class= "picttext">
+                            <img src="assets/studyarea.png" alt="Study Area of Greater Kruger National Park">
+                        </div>
+                    </div>  
+                </div>       
             </div>
         </div>   
         
