--- a/training.html
+++ b/training.html
@@ -94,7 +94,7 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides2 fade">
             <div class="numbertext">1 / 3</div>
-            <img src="assets/Training.jpg" style="width:100%">
+            <img src="assets/TeamTraining.jpg" style="width:50%">
             </div>
         
             <div class="mySlides2 fade">
